--- a/kozi-admin-backend/package.json
+++ b/kozi-admin-backend/package.json
@@ -1,44 +1,32 @@
 {
-  "name": "kozi-admin-chatbot-backend",
-  "version": "1.0.0",
-  "description": "Kozi Admin Bot Backend - Platform Management Assistant API",
+  "name": "kozi-admin-backend",
+  "version": "2.0.0",
+  "description": "Kozi Admin Agent Backend with Real-Time API Integration",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "test": "node tests/integration.test.js",
+    "test:api": "node tests/koziApiService.test.js",
     "migrate": "node database/migrate.js",
-    "seed": "node database/seed.js",
-    "test": "jest",
-    "lint": "eslint ."
+    "seed": "node database/seed.js"
   },
-  "keywords": [
-    "kozi",
-    "admin",
-    "chatbot",
-    "ai",
-    "platform-management"
-  ],
-  "author": "Kozi Team",
-  "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0",
+    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "docx": "^9.5.1",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "helmet": "^7.2.0",
-    "joi": "^18.0.1",
-    "mammoth": "^1.11.0",
-    "mysql2": "^3.15.1",
-    "openai": "^4.104.0",
-    "path": "^0.12.7",
-    "pdf-parse": "^1.1.1",
-    "textract": "^2.5.0",
-    "winston": "^3.17.0"
+    "helmet": "^7.0.0",
+    "winston": "^3.10.0",
+    "joi": "^17.9.2",
+    "openai": "^4.20.0",
+    "@langchain/openai": "^0.0.19",
+    "axios": "^1.6.2",
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.45.0",
-    "jest": "^29.6.2",
     "nodemon": "^3.0.1"
   },
   "engines": {
