--- a/kozi-admin-backend/package.json
+++ b/kozi-admin-backend/package.json
@@ -12,19 +12,19 @@
     "seed": "node database/seed.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "winston": "^3.10.0",
-    "joi": "^17.9.2",
-    "openai": "^4.20.0",
     "@langchain/openai": "^0.0.19",
-    "axios": "^1.6.2",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "mysql2": "^3.6.0",
     "nodemailer": "^6.9.7",
+    "openai": "^4.20.0",
+    "pdf-parse": "^1.1.1",
     "uuid": "^9.0.1",
-    "pdf-parse": "^1.1.1"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
